--- a/MatRoleClaim/Views/Shared/_Layout.cshtml
+++ b/MatRoleClaim/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNet.Identity
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -16,27 +17,30 @@
 
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="@Url.Action("Index", "UserRoles")">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("ManageAccount", "UserRoles")">Manager Account</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "Roles")">Manager Account Level</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "CourseCategories")">Manager Cousce Category</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "Courses")">Manager Cousce</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "RoleClaims")">Setting Accout Level</a>
-                </li>
+                @if (Request.IsAuthenticated)
+                {
+                    <li class="nav-item active">
+                        <a class="nav-link" href="@Url.Action("Index", "UserRoles")">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("ManageAccount", "UserRoles")">Manager Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "Roles")">Manager Account Level</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "CourseCategories")">Manager Cousce Category</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "Courses")">Manager Cousce</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "RoleClaims")">Setting Accout Level</a>
+                    </li>
+                }
                 @*<li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "Admin")">Admin</a>
-                </li>*@
+                        <a class="nav-link" href="@Url.Action("Index", "Admin")">Admin</a>
+                    </li>*@
                 @Html.Partial("_LoginPartial")
             </ul>
             @*<form class="form-inline my-2 my-lg-0">
@@ -50,9 +54,9 @@
     <div class="container-fluid body-content">
         @RenderBody()
         @*<hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Training Mannager System</p>
-        </footer>*@
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Training Mannager System</p>
+            </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
